ipc/ipdl/test/ipdl/error/compressCtor.ipdl
include protocol compressCtorManagee;

rpc protocol compressCtor {
    manages compressCtorManagee;

parent:
    async compressCtorManagee() compress;
};
